--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="#details"><i class="bi bi-check-circle"></i> Al detalle</a></li>
                         <li class="nav-item"><a class="nav-link" href="#calendar"><i class="bi bi-calendar me-2"></i>Calendario</a></li>
                         <li class="nav-item"><a class="nav-link" href="#horario"><i class="bi bi-clock"></i> Horario</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#equipo"><i class="bi bi-people"></i> Equipo</a></li>
                         <li class="nav-item"><a class="nav-link" href="#evaluacion"><i class="bi bi-clipboard-check"></i> Evaluación</a></li>
                         <li class="nav-item"><a class="nav-link" href="#resources"><i class="bi bi-tools"></i> Recursos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#link"><i class="bi bi-lightning-charge"></i> Quick Links</a></li>
@@ -138,7 +139,25 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
+                        
+                           <!-- Equipo  -->
+                        <div class="col-md-12" id="equipo">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title section-title">
+                                        <i class="bi bi-people"></i> Equipo
+                                    </h5>
+                                    <ul>
+                                        <li><a href="https://www.linkedin.com/in/alexandra-zambrano-614309285/" target="_blank" rel="noopener noreferrer">Alexandra Zambrano : alexandra.zambrano@factoriaf5.org<i class="bi bi-linkedin"></i></a> — <strong>Responsable del módulo 1</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/jonnathan-ospina-montalvo-a0416a64/" target="_blank" rel="noopener noreferrer">Jonnathan Ospina <i class="bi bi-linkedin"></i></a> — <strong>Responsable del módulo 2</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/david-robert/" target="_blank" rel="noopener noreferrer">David Robert <i class="bi bi-linkedin"></i></a> — <strong>Responsable del módulo 3</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/gracesalazar/" target="_blank" rel="noopener noreferrer">Grace Salazar <i class="bi bi-linkedin"></i></a> — <strong>Coordinadora del programa</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/jorgebenitezlopez/" target="_blank" rel="noopener noreferrer">Jorge Benítez <i class="bi bi-linkedin"></i></a> — <strong>IT Education Lead</strong></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
 
                         <!-- Evaluacion -->
                          <div class="col-md-12" id="evaluacion">
