--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                             <li>11:15 Proyectos</li>
                                             <li>13:30 Media hora de almuerzo (**en online no tomamos almuerzo**)</li>
                                             <li>14:00 Cursos y certificaciones</li>
-                                            <li>Fin: Presencial (15:30) | Online (15:15)</li>
+                                            <li>Fin: Presencial (16:00) | Online (15:15)</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -149,11 +149,10 @@
                                         <i class="bi bi-people"></i> Equipo
                                     </h5>
                                     <ul>
-                                        <li><a href="https://www.linkedin.com/in/alexandra-zambrano-614309285/" target="_blank" rel="noopener noreferrer">Alexandra Zambrano : alexandra.zambrano@factoriaf5.org<i class="bi bi-linkedin"></i></a> — <strong>Responsable del módulo 1</strong></li>
-                                        <li><a href="https://www.linkedin.com/in/jonnathan-ospina-montalvo-a0416a64/" target="_blank" rel="noopener noreferrer">Jonnathan Ospina <i class="bi bi-linkedin"></i></a> — <strong>Responsable del módulo 2</strong></li>
-                                        <li><a href="https://www.linkedin.com/in/david-robert/" target="_blank" rel="noopener noreferrer">David Robert <i class="bi bi-linkedin"></i></a> — <strong>Responsable del módulo 3</strong></li>
-                                        <li><a href="https://www.linkedin.com/in/gracesalazar/" target="_blank" rel="noopener noreferrer">Grace Salazar <i class="bi bi-linkedin"></i></a> — <strong>Coordinadora del programa</strong></li>
-                                        <li><a href="https://www.linkedin.com/in/jorgebenitezlopez/" target="_blank" rel="noopener noreferrer">Jorge Benítez <i class="bi bi-linkedin"></i></a> — <strong>IT Education Lead</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/alexandra-zambrano-614309285/" target="_blank" rel="noopener noreferrer">Alexandra Zambrano <i class="bi bi-linkedin"></i></a> : alexandra.zambrano@factoriaf5.org — <strong>Responsable del módulo 1</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/david-robert/" target="_blank" rel="noopener noreferrer">David Robert <i class="bi bi-linkedin"></i></a> : david.robert@factoriaf5.org — <strong>Responsable del módulo 3</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/gracesalazar/" target="_blank" rel="noopener noreferrer">Grace Salazar<i class="bi bi-linkedin"></i></a> : grace.salazar@factoriaf5.org — <strong>Coordinadora del programa</strong></li>
+                                        <li><a href="https://www.linkedin.com/in/jorgebenitezlopez/" target="_blank" rel="noopener noreferrer">Jorge Benítez <i class="bi bi-linkedin"></i></a> : jorge.benitez@factoriaf5.org — <strong>IT Education Lead</strong></li>
                                     </ul>
                                 </div>
                             </div>
