Added database connection

--- a/admin.html
+++ b/admin.html
@@ -62,14 +62,14 @@
             <!-- Sidebar -->
             <nav class="col-md-3 col-lg-2 d-md-block admin-sidebar px-0 shadow">
                 <div class="p-4 mb-4">
-                    <a class="navbar-brand text-white d-flex align-items-center" href="/admin">
+                    <a class="navbar-brand text-white d-flex align-items-center" href="admin.html">
                         <img src="./img/logo-factoria-b.svg" alt="Logo" class="me-2 filter-white">
                         <span class="fw-bold">Admin Panel</span>
                     </a>
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/admin">
+                        <a class="nav-link active" href="admin.html">
                             <i class="bi bi-people me-2"></i>Teachers Management
                         </a>
                     </li>
@@ -192,6 +192,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
     <script src="admin.js"></script>
 </body>
 
