--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -123,6 +124,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container-main">
         <div class="header">
@@ -132,7 +134,7 @@
         </div>
 
         <div class="button-group">
-            <a href="/auth" class="btn-custom">
+            <a href="login.html" class="btn-custom">
                 <i class="bi bi-door-open me-2"></i>Teacher Login
             </a>
         </div>
@@ -148,6 +150,8 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="landing.js"></script>
 </body>
+
 </html>
