--- a/login.html
+++ b/login.html
@@ -233,12 +233,8 @@
         </div>
     </div>
 
-    <script>
-        // Force reload script to avoid cache
-        const script = document.createElement('script');
-        script.src = 'login.js?v=' + new Date().getTime();
-        document.body.appendChild(script);
-    </script>
+    <script src="config.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
