--- a/auth.html
+++ b/auth.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="refresh" content="0; url=/login" />
+    <meta http-equiv="refresh" content="0; url=login.html" />
 </head>
+
 <body>
     Redirecting...
 </body>
+
 </html>
