--- a/promotion-detail.html
+++ b/promotion-detail.html
@@ -64,11 +64,7 @@
                         </li>
                         <li class="nav-item teacher-only">
                             <a class="nav-link" href="#collaborators" onclick="switchTab('collaborators')">
-<<<<<<< HEAD
                                 <i class="bi bi-person-plus me-2"></i>Collaborators
-=======
-                                <i class="bi bi-share me-2"></i>Collaborators
->>>>>>> ad1cef6c4dccacbc9c4da3f36f308b1a26ae5eee
                             </a>
                         </li>
                         <li class="nav-item teacher-only">
@@ -614,7 +610,8 @@
                         <div class="mb-3">
                             <label for="collaborator-email" class="form-label">Teacher Email</label>
                             <input type="email" class="form-control" id="collaborator-email" required />
-                            <small class="text-muted">Enter the email of an existing teacher to add them as a collaborator</small>
+                            <small class="text-muted">Enter the email of an existing teacher to add them as a
+                                collaborator</small>
                         </div>
                     </form>
                 </div>
@@ -728,6 +725,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
+    <script src="promotion-detail.js"></script>
 </body>
 
 </html>
