--- a/public-promotion.html
+++ b/public-promotion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="row">
@@ -20,7 +22,8 @@
                     </ul>
                     <figure class="logo-container text-center p-3 mt-auto">
                         <a href="https://factoriaf5.org/" target="_blank">
-                            <img src="./img/logo-factoria-b.svg" alt="Logotipo FactoriaF5" class="img-fluid" style="max-width: 100px;">
+                            <img src="./img/logo-factoria-b.svg" alt="Logotipo FactoriaF5" class="img-fluid"
+                                style="max-width: 100px;">
                         </a>
                     </figure>
                 </div>
@@ -67,7 +70,7 @@
                                     <h5 class="card-title section-title">
                                         <i class="bi bi-calendar me-2"></i> Calendar
                                     </h5>
-                                    <br/>
+                                    <br />
                                     <div class="ratio ratio-16x9">
                                         <iframe id="calendar-iframe"></iframe>
                                     </div>
@@ -100,6 +103,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="config.js"></script>
     <script src="public-promotion.js"></script>
 </body>
+
 </html>
