--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -14,7 +14,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/dashboard">
+            <a class="navbar-brand" href="dashboard.html">
                 <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
                 Bootcamp Manager
             </a>
@@ -28,7 +28,7 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="/dashboard">
+                            <a class="nav-link" href="dashboard.html">
                                 <i class="bi bi-speedometer2 me-2"></i>Dashboard
                             </a>
                         </li>
@@ -224,18 +224,22 @@
                             <h5 class="mb-0"><i class="bi bi-key me-2"></i>Student Access Password</h5>
                         </div>
                         <div class="card-body">
-                            <p class="text-muted mb-4">Set a password that students must enter to access this promotion. This allows you to control access without requiring student login credentials.</p>
+                            <p class="text-muted mb-4">Set a password that students must enter to access this promotion.
+                                This allows you to control access without requiring student login credentials.</p>
 
                             <div class="row align-items-end g-3">
                                 <div class="col-md-6">
                                     <label for="access-password-input" class="form-label">Access Password</label>
                                     <div class="password-input-group">
-                                        <input type="text" class="form-control" id="access-password-input" placeholder="Enter a password">
-                                        <button type="button" class="password-toggle" onclick="togglePasswordVisibility('access-password-input')">
+                                        <input type="text" class="form-control" id="access-password-input"
+                                            placeholder="Enter a password">
+                                        <button type="button" class="password-toggle"
+                                            onclick="togglePasswordVisibility('access-password-input')">
                                             <i class="bi bi-eye"></i>
                                         </button>
                                     </div>
-                                    <small class="form-text text-muted">Leave empty to remove password protection</small>
+                                    <small class="form-text text-muted">Leave empty to remove password
+                                        protection</small>
                                 </div>
                                 <div class="col-md-6">
                                     <button class="btn btn-success w-100" onclick="updateAccessPassword()">
@@ -251,7 +255,8 @@
                             <hr class="my-4">
 
                             <h6>Share with Students</h6>
-                            <p class="text-muted">Once a password is set, students can access the promotion using this link:</p>
+                            <p class="text-muted">Once a password is set, students can access the promotion using this
+                                link:</p>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" id="student-access-link" readonly>
                                 <button class="btn btn-outline-secondary" type="button" onclick="copyAccessLink()">
