fixed gantt chart error

--- a/public/login.html
+++ b/public/login.html
@@ -223,7 +223,7 @@
         </div>
 
         <div class="logo-section">
-            <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" style="height: 80px;" />
+            <img src="./img/Factoria-F5-Official-Logo-2.png" alt="FactoriaF5" />
             <h2 data-i18n="sign-in" style="margin-top: 30px; font-size: 1.8rem;">Sign in to your account</h2>
         </div>
 
