--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -8,6 +8,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/dashboard.css" rel="stylesheet" />
+    <style>
+        .dropdown-item-custom {
+            padding: 0;
+        }
+        .dropdown-item-custom .form-check {
+            padding: 0.5rem 1rem;
+            margin: 0;
+            border-radius: 0;
+        }
+        .dropdown-item-custom .form-check:hover {
+            background-color: var(--bs-gray-100);
+        }
+        .dropdown-item-custom .form-check-label {
+            width: 100%;
+            cursor: pointer;
+        }
+        .pildora-students-dropdown .dropdown-menu {
+            width: 100% !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -469,9 +489,19 @@
                             <div class="card">
                                 <div class="card-header bg-light d-flex justify-content-between align-items-center">
                                     <h5 class="mb-0"><i class="bi bi-lightbulb me-2"></i>Píldoras</h5>
-                                    <button class="btn btn-sm btn-outline-primary" type="button" onclick="addPildoraRow()">
-                                        <i class="bi bi-plus"></i> Add Píldora
-                                    </button>
+                                    <div class="d-flex align-items-center gap-2">
+                                        <button class="btn btn-sm btn-outline-primary" type="button" onclick="addPildoraRow()">
+                                            <i class="bi bi-plus"></i> Add Píldora
+                                        </button>
+                                        <input type="file" id="pildoras-csv-input" accept=".csv" class="d-none" onchange="importPildorasFromCsv(this)">
+                                        <button class="btn btn-sm btn-outline-secondary" type="button" onclick="document.getElementById('pildoras-csv-input').click()">
+                                            <i class="bi bi-filetype-csv"></i> Import CSV
+                                        </button>
+                                        <input type="file" id="pildoras-excel-input" accept=".xlsx,.xls" class="d-none" onchange="importPildorasFromExcel(this)">
+                                        <button class="btn btn-sm btn-outline-success" type="button" onclick="document.getElementById('pildoras-excel-input').click()">
+                                            <i class="bi bi-file-earmark-spreadsheet"></i> Import Excel
+                                        </button>
+                                    </div>
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
@@ -490,7 +520,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <small class="text-muted">Use el desplegable de Student para asignar uno o varios estudiantes a cada píldora.</small>
+                                    <small class="text-muted">Use las casillas de Student para asignar uno o varios estudiantes a cada píldora.</small>
                                 </div>
                             </div>
                         </div>
