feature(dashboard)add background f5 img

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,8 +16,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
-                Bootcamp Manager
             </a>
+            <h1 class="page-title"> Bootcamp Manager</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,31 +44,19 @@
                     </li>
                 </ul>
             </div>
+            
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid container-promotions">
         <div class="row">
-            <!-- Sidebar -->
-            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="sidebar-sticky">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#promotions">
-                                <i class="bi bi-briefcase me-2"></i>Promotions
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
             <!-- Main Content -->
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <main class="ms-sm-auto">
                 <!-- Promotions Section (default) -->
                 <div id="promotions-section" class="section-content">
-                    <div class="d-flex justify-content-between align-items-center my-4">
-                        <h1>Promotions</h1>
-                        <button class="btn btn-primary" onclick="openNewPromotionModal()">
+                    <div class="d-flex  align-items-center my-4">
+                        <h1>My promotions</h1>
+                        <button class="btn-new" onclick="openNewPromotionModal()">
                             <i class="bi bi-plus-circle me-2"></i>New Promotion
                         </button>
                     </div>
