--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
         body {
-            background: linear-gradient(135deg, #ff4700 0%, #d63900 100%);
+            background-image: url("./img/Fondo-factoria-f5-color.png");
+            background-size: 150px 150px;
+            background-repeat: repeat;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -20,6 +22,7 @@
             width: 100%;
             max-width: 450px;
             background: white;
+            margin: 1rem;
             padding: 50px 40px;
             border-radius: 15px;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
@@ -224,7 +227,7 @@
 
         <div class="logo-section">
             <img src="./img/Factoria-F5-Official-Logo-2.png" alt="FactoriaF5" />
-            <h2 data-i18n="sign-in" style="margin-top: 30px; font-size: 1.8rem;">Sign in to your account</h2>
+            <h2 data-i18n="sign-in" style="margin-top: 30px; font-size: 1.8rem;">Welcome to roadmap generator!</h2>
         </div>
 
         <div id="danger-alert" class="alert alert-danger hidden" role="alert"></div>
