--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -7,7 +7,7 @@
     <title>Promotion Details - Bootcamp Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="css/dashboard.css" rel="stylesheet" />
+    <link href="css/promotion-detail.css" rel="stylesheet" />
     <style>
         .dropdown-item-custom {
             padding: 0;
