--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -498,6 +498,16 @@
                                         <div class="badge bg-info text-dark" id="current-module-stats">
                                             <span id="module-pildoras-count">0</span> píldoras
                                         </div>
+                                        <div class="form-check form-switch ms-3 border-start ps-4"
+                                            style="padding-left: 3.5rem !important;">
+                                            <input class="form-check-input" type="checkbox"
+                                                id="pildoras-assignment-toggle"
+                                                onchange="togglePildorasAssignment(this.checked)">
+                                            <label class="form-check-label fw-semibold"
+                                                for="pildoras-assignment-toggle">
+                                                Self-Assignment Open
+                                            </label>
+                                        </div>
                                     </div>
                                     <div class="d-flex align-items-center gap-2">
                                         <button class="btn btn-sm btn-outline-primary" type="button"
