--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,6 +7,7 @@
     <title>Dashboard - Bootcamp Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet" />
 </head>
 
@@ -23,12 +24,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item" style="margin-right: 15px;">
+                    <!-- <li class="nav-item" style="margin-right: 15px;">
                         <div class="btn-group btn-group-sm" role="group">
                             <button type="button" class="btn btn-outline-secondary" onclick="setLanguage('en')" id="lang-en-btn" style="border-color: #ff4700; color: #ff4700;">EN</button>
                             <button type="button" class="btn btn-outline-secondary" onclick="setLanguage('es')" id="lang-es-btn" style="border-color: #ff4700; color: #ff4700;">ES</button>
                         </div>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" role="button"
                             data-bs-toggle="dropdown">
