--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promotion Details - Bootcamp Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/promotion-detail.css" rel="stylesheet" />
     <style>
@@ -40,8 +41,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="dashboard.html">
                 <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
-                Bootcamp Manager
             </a>
+        <h1 class="page-title"> Bootcamp Manager</h1>
         </div>
     </nav>
 
