--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -355,8 +355,9 @@
                                     Justificado</div>
                                 <div class="d-flex align-items-center"><span
                                         class="attendance-dot border bg-white me-2"></span> No marcado</div>
-                                <div class="ms-auto"><i class="bi bi-info-circle me-1"></i> Click on a cell or student
-                                    name for details</div>
+                                <div class="ms-auto"><i class="bi bi-info-circle me-1"></i> <strong>Click</strong> to
+                                    cycle | <strong>Right-click</strong> for comment | <strong>Name</strong> for summary
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1386,9 +1387,46 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-info me-auto" id="view-student-summary-btn">
+                        <i class="bi bi-list-check me-1"></i> Full Month Summary
+                    </button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" onclick="saveAttendanceFromModal()">Save
                         Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Student Monthly Summary Modal -->
+    <div class="modal fade" id="studentSummaryModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-light">
+                    <h5 class="modal-title"><i class="bi bi-person me-2"></i>Month Summary: <span
+                            id="summary-student-name">-</span></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <h6 id="summary-month-title" class="text-muted mb-4">-</h6>
+
+                    <div class="table-responsive">
+                        <table class="table table-sm table-hover">
+                            <thead class="table-light">
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Status</th>
+                                    <th>Comment / Note</th>
+                                </tr>
+                            </thead>
+                            <tbody id="student-summary-body">
+                                <!-- Loaded dynamically -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
