--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -272,13 +272,18 @@
                     <div class="d-flex justify-content-between align-items-center my-4">
                         <h2>Attendance Control</h2>
                         <div class="d-flex align-items-center gap-3">
-                            <button class="btn btn-outline-primary" onclick="prevAttendanceMonth()">
-                                <i class="bi bi-chevron-left"></i>
+                            <button class="btn btn-outline-success" onclick="exportAttendanceToExcel()">
+                                <i class="bi bi-file-earmark-spreadsheet me-2"></i>Export Excel
                             </button>
-                            <h4 class="mb-0 mx-2" id="current-attendance-month-display">February 2026</h4>
-                            <button class="btn btn-outline-primary" onclick="nextAttendanceMonth()">
-                                <i class="bi bi-chevron-right"></i>
-                            </button>
+                            <div class="d-flex align-items-center gap-2 ms-3">
+                                <button class="btn btn-outline-primary" onclick="prevAttendanceMonth()">
+                                    <i class="bi bi-chevron-left"></i>
+                                </button>
+                                <h4 class="mb-0 mx-2" id="current-attendance-month-display">February 2026</h4>
+                                <button class="btn btn-outline-primary" onclick="nextAttendanceMonth()">
+                                    <i class="bi bi-chevron-right"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
 
@@ -1433,6 +1438,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/promotion-detail.js"></script>
 </body>
