--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,9 +16,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
             </a>
-            <h1 class="page-title"> Bootcamp Manager</h1>
+            <img class="page-title" src="./img/bootcamp_manager_logotype_bold.png" height="60"/> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
