--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,7 @@
     <title>Login - Bootcamp Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         body {
             background-image: url("./img/Fondo-factoria-f5-color.png");
@@ -30,12 +31,11 @@
 
         .logo-section {
             text-align: center;
-            margin-bottom: 40px;
+    
         }
 
         .logo-section img {
-            max-width: 80px;
-            margin-bottom: 20px;
+            max-width: 70%;
         }
 
         .logo-section h1 {
@@ -215,19 +215,10 @@
 
 <body>
     <div class="login-container">
-        <!-- Language Switcher -->
-        <div style="position: absolute; top: 20px; right: 20px; display: flex; gap: 10px;">
-            <button onclick="setLanguage('en')"
-                style="padding: 8px 12px; border: 1px solid white; background: transparent; color: white; border-radius: 4px; cursor: pointer;"
-                id="lang-en">EN</button>
-            <button onclick="setLanguage('es')"
-                style="padding: 8px 12px; border: 1px solid white; background: transparent; color: white; border-radius: 4px; cursor: pointer;"
-                id="lang-es">ES</button>
-        </div>
 
         <div class="logo-section">
             <img src="./img/Factoria-F5-Official-Logo-2.png" alt="FactoriaF5" />
-            <h2 data-i18n="sign-in" style="margin-top: 30px; font-size: 1.8rem;">Welcome to roadmap generator!</h2>
+            <h2  style="margin-top: 30px; font-size: 1.8rem;">Welcome to roadmap generator!</h2>
         </div>
 
         <div id="danger-alert" class="alert alert-danger hidden" role="alert"></div>
@@ -258,6 +249,7 @@
             </button>
         </form>
     </div>
+        <img class="logotype"src="./img/bootcamp_manager_logotype_bold_organge.png" /> 
 
     <script src="js/config.js"></script>
     <script src="js/translations.js"></script>
