--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -42,7 +42,7 @@
             <a class="navbar-brand" href="dashboard.html">
                 <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
             </a>
-        <h1 class="page-title"> Bootcamp Manager</h1>
+            <img class="page-title" src="./img/bootcamp_manager_logotype_bold.png" height="60"/> 
         </div>
     </nav>
 
