--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -42,9 +42,15 @@
             <a class="navbar-brand" href="dashboard.html">
                 <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
             </a>
-            <img class="page-title" src="./img/bootcamp_manager_logotype_bold.png" height="60"/> 
+            <img class="page-title" src="./img/bootcamp_manager_logotype_bold.png" height="60"/>
+            <!-- Hamburger Menu Button for Mobile -->
+            <button class="navbar-toggler" type="button" id="sidebar-toggle" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </nav>
+    <!-- Sidebar Overlay for Mobile -->
+    <div class="sidebar-overlay" id="sidebar-overlay"></div>
 
     <div class="container-fluid">
         <div class="row">
