(dashboard) add f5 logotype

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
             </div>
-            
+                        <img src="./img/logo-factoria-b.svg" alt="FactoriaF5" height="40" />
         </div>
     </nav>
 
@@ -55,10 +55,12 @@
                 <!-- Promotions Section (default) -->
                 <div id="promotions-section" class="section-content">
                     <div class="d-flex  align-items-center my-4">
+                        
                         <h1>My promotions</h1>
                         <button class="btn-new" onclick="openNewPromotionModal()">
                             <i class="bi bi-plus-circle me-2"></i>New Promotion
                         </button>
+
                     </div>
 
                     <div id="promotions-list" class="row">
