--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/promotion-detail.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="./img/favicon_bootcamp_manager.png">
+
     <style>
         .dropdown-item-custom {
             padding: 0;
