--- a/public/public-promotion.html
+++ b/public/public-promotion.html
@@ -7,7 +7,8 @@
     <title>Bootcamp Roadmap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./img/favicon_bootcamp_manager.png">
     <link href="css/style.css" rel="stylesheet" />
 </head>
 
